Добавлены Google Fonts43435453

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> <!-- Объявление формата документа -->
 <html>
-<link href="https://fonts.googleapis.com/css?family=Roboto&subset=cyrillic" 
+<link href="https://fois.com/css?family=Roboto&subset=cyrillic" 
       rel="stylesheet">
 <head> <!-- Техническая информация о документе -->
 <meta charset="UTF-8"> <!-- Определяем кодировку символов документа -->
