--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <link rel="stylesheet" type="text/css" href="style.css"> <!-- Подключаем внешнюю таблицу стилей -->
 <script src="script.js"></script> <!-- Подключаем сценарии -->
 </head>
-<body> <!-- Основная часть документа -->
+<body> <!-- Основн 1111 окумента -->
 </body>
 </html>
