--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       rel="stylesheet">
 <head> <!-- Техническая информация о документе -->
 <meta charset="UTF-8"> <!-- Определяем кодировку символов документа -->
-<title>e33677766776er1111</title> <!-- Задаем заголовок документа -->
+<title>e33677766776e22231</title> <!-- Задаем заголовок документа -->
 <link rel="stylesheet" type="text/css" href="style.css"> <!-- Подключаем внешнюю таблицу стилей -->
 <script src="script.js"></script> <!-- Подключаем сценарии -->
 </head>
